Bug 95041 - The menu item Slide -> Custom Animation No longer works
Summary: The menu item Slide -> Custom Animation No longer works
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Samuel Mehrbrodt (allotropia)
URL:
Whiteboard: target:5.1.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2015-10-14 09:16 UTC by Luke
Modified: 2016-10-25 19:20 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2015-10-14 09:16:35 UTC
Steps to reproduce:
1. With a recent build of Impress, insert a shape
2. From the menu, Slide -> Custom Animation 
Expected result:
The Custom Animation Sidebar Opens
Actual result:
Nothing

This was working in older builds of LibreOffice like 4.3. 
Tested with Version: 5.1.0.0.alpha1+
Build ID: f830600ece806ec365a4839e79afabe183c5e36d
Comment 1 Maxim Monastirsky 2015-10-14 10:07:02 UTC
Regression of:

commit d38e743e8eb3fa70faf194c25dea1893029c5460
Author: Laurent Godard <lgodard.libre@laposte.net>
Date:   Mon Sep 14 15:58:37 2015 +0200

    Rename Sidebar.xcu node names to be meaningful

The old panel names are used in the codebase all over the place (not specific to Custom Animation).
Comment 2 Laurent Godard 2015-10-14 10:14:43 UTC
a git grep did nos show this use and manual testing worked

btw, if the patch is problematic, feel free to remove it
Comment 3 Luke 2015-10-14 10:19:12 UTC
Laurent or Sam,
As it's just a superficial name change, can you please revert it until you can figure out how to change names without breaking the UI?
Comment 4 Samuel Mehrbrodt (allotropia) 2015-10-14 10:25:00 UTC
I'll see whether I can pull up a quick fix for this
Comment 5 Commit Notification 2015-10-14 10:43:41 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=64c8bf922dbd938f6c53a61410317242cd3962aa

tdf#95041 Fix sidebar node names

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2015-10-14 11:49:46 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ea11587a750023806a884c2b74ae728fb60340d5

tdf#95041 Fix more sidebar node names

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Samuel Mehrbrodt (allotropia) 2015-10-14 11:51:20 UTC
(In reply to Maxim Monastirsky from comment #6)
> @Samuel: There are 2 more you missed:
> 
> http://opengrok.libreoffice.org/xref/core/sd/source/ui/slidesorter/
> controller/SlsSlotManager.cxx#185
> 
> http://opengrok.libreoffice.org/xref/core/sd/source/ui/view/
> ViewShellImplementation.cxx#125

Thanks Maxim! Changed those also.