tdf#95041 Fix sidebar node names

Change-Id: I3435de44e04268dc557faedba944c2c33385b89c