sd/source/ui/table/tablefunction.cxx
@@ -208,7 +208,7 @@ void DrawViewShell::FuTable(SfxRequest& rReq)
             // First make sure that the sidebar is visible
             GetViewFrame()->ShowChildWindow(SID_SIDEBAR);
             ::sfx2::sidebar::Sidebar::ShowPanel(
-                OUString("ImpressTableDesignPanel"),
+                OUString("SdTableDesignPanel"),
                 GetViewFrame()->GetFrame().GetFrameInterface());
         }
 
